--- a/springMVC/item-service/src/main/resources/templates/basic/addForm.html
+++ b/springMVC/item-service/src/main/resources/templates/basic/addForm.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns: th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}"
+            href="../css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
@@ -10,12 +11,14 @@
     </style>
 </head>
 <body>
+
 <div class="container">
     <div class="py-5 text-center">
         <h2>상품 등록 폼</h2>
     </div>
     <h4 class="mb-3">상품 입력</h4>
-    <form action="item.html" method="post">
+<!--    url 같으면 action url 비워놔도 됨 -->
+    <form action="item.html" th:action method="post">
         <div>
             <label for="itemName">상품명</label>
             <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요">
@@ -38,7 +41,9 @@
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='items.html'" type="button">취소
+                        onclick="location.href='items.html'"
+                        th:onclick="|location.href='@{/basic/items}'|"
+                        type="button">취소
                 </button>
             </div>
         </div>
